Kapt: Fix remaining issues with Java 9 compatibility in converter, add Java 9 tests